Add Fragment for beverage detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="beverage_title_label">Name</string>
+    <string name="id_label">Id:</string>
+    <string name="pack_label">Pack:</string>
+    <string name="price_label">Price:</string>
+    <string name="active_label">Active:</string>
 </resources>
